(lang dune 3.12)
(name durin)
(generate_opam_files true)
(cram enable)
(using mdx 0.2)

(license BSD3)
(maintainers "Tim McGilchrist <timmcgil@gmail.com>")
(authors "Tim McGilchrist <timmcgil@gmail.com>")
(source (github tmcgilchrist/durin))

(package
 (name durin)
 (tags (dwarf debug))
 (depends
  (ocaml (>= 4.14))
  (object (>= 0.1))
  (integers (>= 0.8))
  (cmdliner (and :with-test (>= 2.1)))
  (alcotest :with-test)
  (qcheck-core :with-test)
  (qcheck-alcotest :with-test)
  (ppx_import :with-test)
  (ppx_deriving_qcheck :with-test)
  (mdx :with-test)
  (patdiff :with-dev-setup)
  (ocamlformat (and :with-dev-setup (= 0.28.1))))
 (synopsis "A library for reading and writing the DWARF debugging format.")
 (description "A library for reading and writing the DWARF debugging format."))
